--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header class="header">
+    <div class="container">
+      <div class="header__wrapper">
+        <img src="./img/my-photo.webp" alt="" class="my-photo">
+      </div>
+    </div>
+  </header>
 </body>
 </html>
