--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Daniil Iakimenko - CV</title>
+  <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-  <header class="header">
-    <div class="container">
-      <div class="header__wrapper">
-        <img src="./img/my-photo.webp" alt="" class="my-photo">
-      </div>
-    </div>
-  </header>
+  
 </body>
+
 </html>
