feat: add header

--- a/index.html
+++ b/index.html
@@ -6,10 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniil Iakimenko - CV</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="assets/favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  
+  <header class="header">
+    <div class="container">
+      <section class="section section-profile">
+        <img src="assets/img/my-photo.webp" alt="Photo">
+        <div class="section-profile-content">
+          <h1 class="section-profile-title">DANIIL IAKIMENKO</h1>
+          <p class="section-profile-subtitle">Junior Front-End Developer</p>
+        </div>
+      </section>
+
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#contacts" class="nav-link">Contact Information</a></li>
+          <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+          <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+          <li class="nav-item"><a href="#code" class="nav-link">Code Examples</a></li>
+          <li class="nav-item"><a href="#work" class="nav-link">Work Experience / Projects</a></li>
+          <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+          <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
