fix: remove horizontal scroll

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       <section class="section" id="languages">
         <h2 class="section-title">Languages</h2>
         <ul class="section-list">
-          <li class="section-list"><span>Russian: </span>Native</li>
-          <li class="section-list"><span>English: </span>A2</li>
+          <li class="section-item"><span>Russian: </span>Native</li>
+          <li class="section-item"><span>English: </span>A2</li>
         </ul>
       </section>
     </div>
