feat: add footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="container">
       <section class="section section-profile">
-        <img src="assets/img/my-photo.webp" alt="Photo">
+        <img src="assets/img/my-photo.webp" alt="Photo" width="200" height="200">
         <div class="section-profile-content">
           <h1 class="section-profile-title">DANIIL IAKIMENKO</h1>
           <p class="section-profile-subtitle">Junior Front-End Developer</p>
@@ -118,6 +118,14 @@
       </section>
     </div>
   </main>
+
+  <footer class="footer">
+    <div class="container footer-container">
+      <a href="https://github.com/DaniilIakimenko" class="git-link">DaniilIakimenko</a>
+      <a href="https://rs.school/courses/javascript-ru"><img src="assets/svg/rs-school-logo.svg" alt="RS School logo" width="120"></a>
+      <div>2025</div>
+    </div>
+  </footer>
 </body>
 
 </html>
